--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,44 @@
 amqp==5.0.9
+arrow==1.2.2
+asgiref==3.4.1
 billiard==3.6.4.0
 celery==5.2.3
+certifi==2021.10.8
+charset-normalizer==2.0.11
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-Deprecated==1.2.13
-flower==1.0.0
+dateparser==1.1.0
+Django==4.0.1
+django-cors-headers==3.10.1
+djangorestframework==3.13.1
+dnspython==2.2.0
+eventlet==0.33.0
+gevent==21.12.0
 greenlet==1.1.2
-humanize==3.14.0
+idna==3.3
 kombu==5.2.3
-packaging==21.3
-prometheus-client==0.13.1
-prompt-toolkit==3.0.27
-pyparsing==3.0.7
+moment==0.12.1
+playwright==1.17.2
+prompt-toolkit==3.0.28
+pyee==8.2.2
+python-dateutil==2.8.2
+python-decouple==3.5
 pytz==2021.3
-redis==4.1.2
+pytz-deprecation-shim==0.1.0.post0
+regex==2022.1.18
+requests==2.27.1
+simplejson==3.17.6
 six==1.16.0
-SQLAlchemy==1.4.31
-tornado==6.1
+sqlparse==0.4.2
+times==0.7
+tzdata==2021.5
+tzlocal==4.1
+urllib3==1.26.8
+utils==1.0.1
 vine==5.0.0
 wcwidth==0.2.5
-wrapt==1.13.3
+websockets==10.1
+zope.event==4.5.0
+zope.interface==5.4.0
